--- a/stats-preview-card-component-main/styles.css
+++ b/stats-preview-card-component-main/styles.css
@@ -1,2 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Lexend+Deca&display=swap');
+
+
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+
+body {
+  background-color: hsl(233, 47%, 7%);
+  color: hsl(0, 0%, 100%);
+}
+
+h1 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+}
+
+#card {
+  border: 1px solid white;
+  width: 80%;
+  margin: 25px;
+  padding: 25px;
+}
+
+.purple {
+  color: hsl(277, 64%, 61%);
+}
