--- a/stats-preview-card-component-main/styles.css
+++ b/stats-preview-card-component-main/styles.css
@@ -1,27 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Lexend+Deca&display=swap');
 
-
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
-
 body {
-  background-color: hsl(233, 47%, 7%);
-  color: hsl(0, 0%, 100%);
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-family: "Inter", sans-serif;
+   font-weight: 700;
+   font-size: 1em;
+   background-color: hsl(233, 47%, 7%);
+   color: hsl(0, 0%, 100%);
 }
 
 h1 {
-  font-family: 'Inter', sans-serif;
-  font-weight: 700;
+    font-size: 1.8em;
 }
 
-#card {
+.container {
+  max-width: 85%;
+  display: flex;
+  background-color: hsl(244, 38%, 16%);
+}
+
+.words {
+  max-width: 50%;
   border: 1px solid white;
-  width: 80%;
-  margin: 25px;
-  padding: 25px;
 }
 
 .purple {
   color: hsl(277, 64%, 61%);
 }
+
+.stats__number {
+  margin: 10px;
+}
+
+.stats__heading {
+  display: block;
+}
+
+.photo_container {
+  border: 1px solid white;
+  display: flex;
+  float: right;
+  justify-content: flex-end;
+  background-color: hsl(277, 64%, 61%);
+}
+
+.photo {
+  width: auto;
+  mix-blend-mode: multiply;
+  opacity: 0.8;
+}
+
+.attribution { font-size: 11px; text-align: center; }
+.attribution a { color: hsl(228, 45%, 44%); }
