--- a/3-column-preview-card-component-main/styles.css
+++ b/3-column-preview-card-component-main/styles.css
@@ -22,17 +22,18 @@ a {
 
 .main_container {
   display: flex;
-  justify-content: center;
   font-family: 'Lexend Deca', sans-serif;
   font-weight: 400;
   border-radius: 30px;
-  max-width: 85%;
-  margin: 50px;
+  max-width: 70%;
+  margin-top: 200px;
+  height: 50vh;
 }
 
 .sedan_box {
   background-color: hsl(31, 77%, 52%);
   padding: 10px;
+  margin: 0;
 }
 
 .suv_box {
