--- a/3-column-preview-card-component-main/styles.css
+++ b/3-column-preview-card-component-main/styles.css
@@ -8,6 +8,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 15px;
+  height: 100vh;
 }
 
 h2 {
@@ -26,15 +27,17 @@ a {
   font-family: 'Lexend Deca', sans-serif;
   font-weight: 400;
   font-size: 1.2em;
-  border-radius: 30px;
-  max-width: 60%;
-  height: 50vh;
+  max-width: 55%;
+  height: 400px;
+  box-sizing: border-box;
 }
 
 .sedan_box {
   background-color: hsl(31, 77%, 52%);
   padding: 10px;
   margin: 0;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .suv_box {
@@ -47,6 +50,8 @@ a {
   background-color: hsl(179, 100%, 13%);
   padding: 10px;
   margin: 0;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .paragraphs {
@@ -57,12 +62,11 @@ a {
 .button_sedan {
   font-family: 'Lexend Deca', sans-serif;
   background-color: hsl(0, 0%, 95%);
-  color: hsl(31, 77%, 52%)
+  color: hsl(31, 77%, 52%);
   border: 2px solid white;
   padding: 15px 25px 15px 25px;
   border-radius: 20px;
   margin-left: 50px;
-  margin-top: 50px;
 }
 
 .button_sedan:hover {
@@ -72,13 +76,12 @@ a {
 
 .button_suv {
   font-family: 'Lexend Deca', sans-serif;
-  background-color: white;
+  background-color: hsl(0, 0%, 95%);
   color: hsl(184, 100%, 22%);
   border: 2px solid white;
   padding: 15px 25px 15px 25px;
   border-radius: 20px;
   margin-left: 50px;
-  margin-top: 50px;
 }
 
 .button_suv:hover {
@@ -88,13 +91,12 @@ a {
 
 .button_lux {
   font-family: 'Lexend Deca', sans-serif;
-  background-color: white;
-  color: black;
+  background-color: hsl(0, 0%, 95%);
+  color: hsl(179, 100%, 13%);
   border: 2px solid white;
   padding: 15px 25px 15px 25px;
   border-radius: 20px;
   margin-left: 50px;
-  margin-top: 60px;
 }
 
 .button_lux:hover {
