--- a/3-column-preview-card-component-main/styles.css
+++ b/3-column-preview-card-component-main/styles.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 
+* { margin: 0; padding: 0; }
 
 body {
   display: flex;
@@ -15,11 +16,13 @@ h2 {
 font-family: 'Big Shoulders Display', cursive;
 font-weight: 700;
 color: hsl(0, 0%, 95%);
-padding: 0px 0px 0px 50px;
+padding: 0px 0px 0px 20px;
+padding: 2rem;
 }
 
 a {
   text-decoration: none;
+  padding: 2rem;
 }
 
 .main_container {
@@ -27,33 +30,33 @@ a {
   font-family: 'Lexend Deca', sans-serif;
   font-weight: 400;
   font-size: 1.2em;
-  max-width: 55%;
-  height: 400px;
+  max-width: 70rem;
+  padding: 50px;
   box-sizing: border-box;
 }
 
 .sedan_box {
   background-color: hsl(31, 77%, 52%);
-  padding: 10px;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
+  padding: 30px;
 }
 
 .suv_box {
   background-color: hsl(184, 100%, 22%);
-  padding: 10px;
+  padding: 30px;
 }
 
 .luxury_box {
   background-color: hsl(179, 100%, 13%);
-  padding: 10px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+  padding: 30px;
 }
 
 .paragraphs {
   color: hsla(0, 0%, 100%, 0.75);
-  padding: 20px 50px;
+  padding: 2rem;
 }
 
 .button_sedan {
@@ -63,6 +66,7 @@ a {
   border: 2px solid white;
   padding: 15px 25px 15px 25px;
   border-radius: 20px;
+  margin: 10px;
 }
 
 .button_sedan:hover {
@@ -91,7 +95,6 @@ a {
   border: 2px solid white;
   padding: 15px 25px 15px 25px;
   border-radius: 20px;
-
 }
 
 .button_lux:hover {
